# snowcammeasurement

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
resorts/: __init__.py
resorts/abasin/: __init__.py  calibration.json
resorts/alta/: __init__.py  calibration.json
resorts/beavercreek/: __init__.py  calibration.json
resorts/bigsky/: __init__.py  calibration.json
resorts/boreal/: __init__.py  calibration.json
resorts/breckenridge/: __init__.py  calibration.json
resorts/brian_head/: __init__.py  calibration.json
resorts/bridgerbowl/: __init__.py  calibration.json
resorts/cherry_peak/: __init__.py  calibration.json
resorts/crestedbutte/: __init__.py  calibration.json
resorts/deer_valley/: __init__.py  calibration.json
resorts/discovery/: __init__.py  calibration.json
resorts/grandtarghee/: __init__.py  calibration.json
resorts/keystone/: __init__.py  calibration.json
resorts/kirkwood/: __init__.py  calibration.json
resorts/loveland/: __init__.py  calibration.json
resorts/monarch/: __init__.py  calibration.json
resorts/northstar/: __init__.py  calibration.json
resorts/park_city/: __init__.py  calibration.json
resorts/powder_mountain/: __init__.py  calibration.json
resorts/snowbasin/: __init__.py  calibration.json
resorts/snowbird/: __init__.py  calibration.json
resorts/snowmass/: __init__.py  calibration.json  measurer.py
resorts/steamboat/: __init__.py  calibration.json
resorts/sundance/: __init__.py  calibration.json
resorts/sunlight/: __init__.py  calibration.json
resorts/vail/: __init__.py  calibration.json
resorts/whitefish/: __init__.py  calibration.json
resorts/winter_park/: __init__.py  calibration.json  measurer.py
scripts/: cron_measure.sh  measure_new_images.py
snowcammeasurement/: __init__.py  analytics.py  auto_calibrate.py  config.py  db.py  frontend.py  integration.py  manual_calibrate.py  measurement.py  ocr_calibrate.py  tilt_calibrate.py
