[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowcammeasurement"
version = "0.1.0"
description = "Computer vision library for measuring snow depth from webcam images"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Trent"}
]
keywords = ["snow", "measurement", "computer-vision", "webcam", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "opencv-python-headless>=4.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.6.0",
]
full = [
    "easyocr>=1.6.0",
    "scipy>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/trent/snowcammeasurement"
Repository = "https://github.com/trent/snowcammeasurement"

[project.scripts]
snow-measure = "snowcammeasurement.integration:main"
snow-calibrate = "snowcammeasurement.manual_calibrate:main"
snow-auto-calibrate = "snowcammeasurement.auto_calibrate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["snowcammeasurement*"]

[tool.setuptools.package-data]
snowcammeasurement = ["*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=snowcammeasurement --cov-report=term-missing"
